--- a/metrics-api/Gemfile
+++ b/metrics-api/Gemfile
@@ -11,6 +11,12 @@ gem "pg", "~> 1.1"
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", ">= 5.0"
 
+
+gem 'rest-client'
+# To rednder json in a fast way
+gem 'fast_jsonapi'
+gem 'active_model_serializers'
+
 # Build JSON APIs with ease [https://github.com/rails/jbuilder]
 # gem "jbuilder"
 
@@ -29,17 +35,11 @@ gem "tzinfo-data", platforms: %i[ windows jruby ]
 # Reduces boot times through caching; required in config/boot.rb
 gem "bootsnap", require: false
 
-
-# To rednder json in a fast way
-gem 'fast_jsonapi'
-gem 'active_model_serializers'
-
-
 # Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
 # gem "image_processing", "~> 1.2"
 
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin Ajax possible
- gem "rack-cors"
+# gem "rack-cors"
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
@@ -48,7 +48,10 @@ group :development, :test do
   gem 'factory_bot_rails'
   gem 'cucumber-rails', require: false
   gem 'database_cleaner-active_record'
-  gem 'rest-client'
+  gem 'byebug'
+  gem 'spring'
+  gem 'ruby-debug-ide'
+  gem "debase"
 end
 
 group :development do
