--- a/metrics-api/Gemfile
+++ b/metrics-api/Gemfile
@@ -17,6 +17,8 @@ gem 'rest-client'
 gem 'fast_jsonapi'
 gem 'active_model_serializers'
 
+gem 'rswag-api'
+gem 'rswag-ui'
 # Build JSON APIs with ease [https://github.com/rails/jbuilder]
 # gem "jbuilder"
 
@@ -51,7 +53,8 @@ group :development, :test do
   gem 'byebug'
   gem 'spring'
   gem 'ruby-debug-ide'
-  gem "debase"
+  gem 'debase'
+  gem 'rswag-specs'
 end
 
 group :development do
