--- a/metrics-dashboard/package.json
+++ b/metrics-dashboard/package.json
@@ -39,7 +39,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
     "@testing-library/jest-dom": "^6.4.1",
-    "@testing-library/react": "^14.2.1"
+    "@testing-library/react": "^14.2.1",
+    "axios-mock-adapter": "^1.22.0",
+    "babel-jest": "^29.7.0"
   }
 }
