--- a/metrics-dashboard/package.json
+++ b/metrics-dashboard/package.json
@@ -1,18 +1,31 @@
 {
-  "name": "metrics-dashboard",
+  "name": "dashboard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.7",
+    "@mui/icons-material": "^5.15.6",
+    "@mui/material": "^5.15.6",
+    "@mui/x-data-grid": "^6.19.2",
+    "@nivo/bar": "^0.84.0",
+    "@nivo/core": "^0.84.0",
     "@nivo/line": "^0.84.0",
+    "@nivo/pie": "^0.84.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "cypress": "^13.6.3",
+    "date-fns": "^3.3.1",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^0.7.1",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,12 +52,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.23.3",
-    "@testing-library/jest-dom": "^6.4.1",
-    "@testing-library/react": "^14.2.1",
-    "axios-mock-adapter": "^1.22.0",
-    "babel-jest": "^29.7.0"
+    "@cucumber/cucumber": "^10.3.1",
+    "cypress-cucumber-preprocessor": "^4.3.1"
   }
 }
