--- a/metrics-dashboard/package.json
+++ b/metrics-dashboard/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.6",
@@ -14,7 +15,6 @@
     "@nivo/pie": "^0.84.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "cypress": "^13.6.3",
     "date-fns": "^3.3.1",
@@ -53,6 +53,12 @@
   },
   "devDependencies": {
     "@cucumber/cucumber": "^10.3.1",
+    "@testing-library/user-event": "^14.5.2",
     "cypress-cucumber-preprocessor": "^4.3.1"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!axios)/.*"
+    ]
   }
 }
